clean code & api
